# oidc

./: .gitignore  dev.sh  docker-compose.yml  main.py  public-next.pem  public.pem  pyproject.toml
app/: config.py  db.py  jwt.py  main.py  models.py  templates_config.py
app/models/: user.py
app/oauth/: client_auth.py  constants.py  errors.py  jwt.py  models.py  pkce.py  routes.py  schemas.py  service.py  utils.py
app/oauth/services/: authorization.py  client.py  token.py  userinfo.py
app/routes/: auth.py
app/scripts/: create_oauth_clients.py  create_tables.py
app/security/: csrf.py
app/services/: auth.py  jwt.py
app/templates/: consent.html  error.html  login.html
plans/: oauth-consent-flow.md  oauth-error-handling.md
tests/: test_auth_code_grant.py  test_client_credentials_grant.py  test_discovery.py  test_id_tokens.py  test_jwks.py  test_oauth_errors.py  test_oauth_rfc_compliance.py  test_pkce.py  test_refresh_tokens.py  test_token_headers.py  test_token_revocation.py  test_user_auth.py  test_userinfo.py
